--- a/biodata.html
+++ b/biodata.html
@@ -1,33 +1,65 @@
 <!DOCTYPE html>
 <head>
     <title>BIODATA (DI220111)</title>
+    <style>
+        table, th {
+            border : 1px solid black;
+        }
+    </style>
     <body>
         <center>
-            <table border="1" width="600">
+            <table>
                 <tr>
-                    <td rowspan="2">Photo</td>
-                    <td>MY BIODATA</td>
+                    <th colspan="5">MY BIODATA</th>
                 </tr>
                 <tr>
-                    <td colspan="1">About Me</td>
+                    <td colspan="1">NAME</td>
+                    <td colspan="3"></td>
+                    <td colspan="1">PHOTO</td>
                 </tr>
                 <tr>
-                    <td colspan="1">Personal Information</td>
+                    <td colspan="1">DATE OF BIRTH</td>
+                    <td colspan="4"></td>
                 </tr>
                 <tr>
-                    <td colspan="1">Contact Me</td>
+                    <td colspan="1">RELIGION</td>
+                    <td colspan="4"></td>
                 </tr>
                 <tr>
-                    <td colspan="1">Academics</td>
+                    <td colspan="1">RACE</td>
+                    <td colspan="4"></td>
                 </tr>
                 <tr>
-                    <td colspan="1">Programming Skills</td>
+                    <td colspan="1" rowspan="4">ADDRESS</td>
+                    <tr colspan="1">STREET</tr>
+                    <td colspan="3"></td>
+                    <tr colspan="1">TOWN</tr>
+                    <td colspan="3"></td>
+                    <tr colspan="1">DISTRICT</tr>
+                    <td colspan="3"></td>
                 </tr>
                 <tr>
-                    <td colspan="1">Personal Interest</td>
+                    <td colspan="1" rowspan="3">CONTACT</td>
+                    <tr colspan="1">MOBILE PHONE</tr>
+                    <td colspan="3"></td>
+                    <tr colspan="1">SOCIAL MEDIA</tr>
+                    <td colspan="3"></td>
                 </tr>
                 <tr>
-                    <td colspan="1">Future Plans</td>
+                    <td colspan="1">COURSE AND INSTITUTION</td>
+                    <td colspan="4"></td>
+                </tr>
+                <tr>
+                    <td colspan="1">PROGRAMMING SKILLS</td>
+                    <td colspan="4"></td>
+                </tr>
+                <tr>
+                    <td colspan="1">PERSONAL INTEREST</td>
+                    <td colspan="4"></td>
+                </tr>
+                <tr>
+                    <td colspan="1">FUTURE PLAN IN 2024</td>
+                    <td colspan="4"></td>
                 </tr>
             </table>
         </center>
