--- a/biodata.html
+++ b/biodata.html
@@ -32,18 +32,18 @@
                 </tr>
                 <tr>
                     <td colspan="1" rowspan="4">ADDRESS</td>
-                    <tr colspan="1">STREET</tr>
+                    <td colspan="1">STREET</tr>
                     <td colspan="3"></td>
-                    <tr colspan="1">TOWN</tr>
+                    <td colspan="1">TOWN</tr>
                     <td colspan="3"></td>
-                    <tr colspan="1">DISTRICT</tr>
+                    <td colspan="1">DISTRICT</tr>
                     <td colspan="3"></td>
                 </tr>
                 <tr>
                     <td colspan="1" rowspan="3">CONTACT</td>
-                    <tr colspan="1">MOBILE PHONE</tr>
+                    <td colspan="1">MOBILE PHONE</tr>
                     <td colspan="3"></td>
-                    <tr colspan="1">SOCIAL MEDIA</tr>
+                    <td colspan="1">SOCIAL MEDIA</tr>
                     <td colspan="3"></td>
                 </tr>
                 <tr>
