--- a/biodata.html
+++ b/biodata.html
@@ -1,68 +1,81 @@
 <!DOCTYPE html>
+<html>
 <head>
-    <title>BIODATA (DI220111)</title>
+    <title>Biography</title>
     <style>
-        table, th {
-            border : 1px solid black;
+        table {
+            border-collapse: collapse;
+            width: 50%;
+            margin: auto;
+        }
+        th, td {
+            border: 3px solid black;
+            padding: 3px;
+            text-align: left;
         }
     </style>
 </head>
-    <body>
-        <center>
-            <table>
-                <tr>
-                    <th colspan="5">MY BIODATA</th>
-                </tr>
-                <tr>
-                    <td colspan="1">NAME</td>
-                    <td colspan="3"></td>
-                    <td colspan="1">PHOTO</td>
-                </tr>
-                <tr>
-                    <td colspan="1">DATE OF BIRTH</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td colspan="1">RELIGION</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td colspan="1">RACE</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td colspan="1" rowspan="4">ADDRESS</td>
-                    <td colspan="1">STREET</tr>
-                    <td colspan="3"></td>
-                    <td colspan="1">TOWN</tr>
-                    <td colspan="3"></td>
-                    <td colspan="1">DISTRICT</tr>
-                    <td colspan="3"></td>
-                </tr>
-                <tr>
-                    <td colspan="1" rowspan="3">CONTACT</td>
-                    <td colspan="1">MOBILE PHONE</tr>
-                    <td colspan="3"></td>
-                    <td colspan="1">SOCIAL MEDIA</tr>
-                    <td colspan="3"></td>
-                </tr>
-                <tr>
-                    <td colspan="1">COURSE AND INSTITUTION</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td colspan="1">PROGRAMMING SKILLS</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td colspan="1">PERSONAL INTEREST</td>
-                    <td colspan="4"></td>
-                </tr>
-                <tr>
-                    <td colspan="1">FUTURE PLAN IN 2024</td>
-                    <td colspan="4"></td>
-                </tr>
-            </table>
-        </center>
-    </body>
+<body>
+    <h2 style="text-align: center;">Biography</h2>
+    <table>
+        <tr>
+            <th colspan="1" style="font-size: 15px;">Name</th>
+            <td colspan="2">MUHAMMAD AMIR ISKANDAR BIN ISMAIL</td>
+            <th colspan="1" style="text-align: center;">Photo<p></p>
+            <img src="image/Amir Iskandar Passport.jpg" alt="Passport Photo" style="width:70px;height:70px;">
+            </th>
+        </tr>
+        <tr>
+            <th colspan="" style="font-size: 15px;">Date of Birth</th>
+            <td colspan="3">6TH FEBRUARY 2002 (06/02/2002)</td>
+        </tr>
+        <tr>
+            <th colspan="1" rowspan="4" style="font-size: 15px;">Address</th>
+            <td>Street</td>
+            <td colspan=2">NO.39, LORONG PERMAI 3, TAMAN KARAK PERMAI</td>
+        </tr>
+        <tr>
+            <td>Town</td>
+            <td colspan="2">KARAK</td>
+        </tr>
+        <tr>
+            <td>District</td>
+            <td colspan="2">BENTONG</td>
+        </tr>
+        <tr>
+            <td>State</td>
+            <td colspan="2">PAHANG</td>
+        </tr>
+        <tr>
+            <th rowspan="3" style="font-size: 15px;">Contacts</th>
+            <td>Mobile Phone</td>
+            <td colspan="2">016-6312076</td>
+        </tr>
+        <tr>
+            <td>Social Media</td>
+            <td colspan="2">Instagram : @iskandarmxr</td>
+        </tr>
+        <tr>
+            <td>Website</td>
+            <td colspan="2"><a href="https://www.mxrgameshop.com">www.mxrgameshop.com</a></td>
+        </tr>
+        <tr>
+            <th style="font-size: 15px;">Course and Institution</th>
+            <td colspan="3">Computer Science (Software Engineering)<p></p>Universiti Tun Hussein Onn Malaysia
+            </td>
+        </tr>
+        <tr>
+            <th style="font-size: 15px;">Programming Skills</th>
+            <td colspan="3">C language, Java, HTML, PHP, Visual Basic, C#</td>
+        </tr>
+        <tr>
+            <th style="font-size: 15px;">Personal Interest</th>
+            <td colspan="3">Gaming and Online Business</td>
+        </tr>
+        <tr>
+            <th>Future Plans in 2024</th>
+            <td colspan="3">Achieving High CGPA (insyaAllah)</td>
+        </tr>
+    </table>
+</body>
 </html>
