New changes for Lab 3

--- a/biodata.html
+++ b/biodata.html
@@ -3,78 +3,103 @@
 <head>
     <title>Biography</title>
     <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+            background-image: url("image/background-image.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        h2 {
+            text-align: center;
+        }
         table {
             border-collapse: collapse;
             width: 50%;
             margin: auto;
         }
         th, td {
-            border: 3px solid black;
-            padding: 3px;
+            border: 3px solid rgb(242, 15, 15);
+            padding: 5px;
             text-align: left;
+        }
+        img {
+            display: flex;
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 20%;
+            max-height: 30%;
         }
     </style>
 </head>
 <body>
-    <h2 style="text-align: center;">Biography</h2>
+<img src="image/UTHM Logo.png"></td>
+    <h2>Biography</h2>
     <table>
         <tr>
-            <th colspan="1" style="font-size: 15px;">Name</th>
-            <td colspan="2">MUHAMMAD AMIR ISKANDAR BIN ISMAIL</td>
-            <th colspan="1" style="text-align: center;">Photo<p></p>
-            <img src="image/Amir Iskandar Passport.jpg" alt="Passport Photo" style="width:70px;height:70px;">
+            <th bgcolor="#D5D5D5" colspan="1" style="font-size: 15px;">Name</th>
+            <td bgcolor="#FFFFFF"colspan="2">MUHAMMAD AMIR ISKANDAR BIN ISMAIL</td>
+            <th bgcolor="#FFFFFF" colspan="1" style="text-align: center;">Photo<p></p>
+            <img src="image/Amir Iskandar Passport.jpg" alt="Passport Photo">
             </th>
         </tr>
         <tr>
-            <th colspan="" style="font-size: 15px;">Date of Birth</th>
-            <td colspan="3">6TH FEBRUARY 2002 (06/02/2002)</td>
+            <th bgcolor="#D5D5D5" colspan="" style="font-size: 15px;">Date of Birth</th>
+            <td bgcolor="#FFFFFF" colspan="3">6TH FEBRUARY 2002 (06/02/2002)</td>
         </tr>
         <tr>
-            <th colspan="1" rowspan="4" style="font-size: 15px;">Address</th>
-            <td>Street</td>
-            <td colspan=2">NO.39, LORONG PERMAI 3, TAMAN KARAK PERMAI</td>
+            <th bgcolor="#D5D5D5" colspan="1" rowspan="4" style="font-size: 15px;">Address</th>
+            <td bgcolor="#FFFFFF">Street</td>
+            <td bgcolor="#FFFFFF" colspan=2">NO.39, LORONG PERMAI 3, TAMAN KARAK PERMAI</td>
         </tr>
         <tr>
-            <td>Town</td>
-            <td colspan="2">KARAK</td>
+            <td bgcolor="#FFFFFF">Town</td>
+            <td bgcolor="#FFFFFF" colspan="2">KARAK</td>
         </tr>
         <tr>
-            <td>District</td>
-            <td colspan="2">BENTONG</td>
+            <td bgcolor="#FFFFFF">District</td>
+            <td bgcolor="#FFFFFF" colspan="2">BENTONG</td>
         </tr>
         <tr>
-            <td>State</td>
-            <td colspan="2">PAHANG</td>
+            <td bgcolor="#FFFFFF">State</td>
+            <td bgcolor="#FFFFFF" colspan="2">PAHANG</td>
         </tr>
         <tr>
-            <th rowspan="3" style="font-size: 15px;">Contacts</th>
-            <td>Mobile Phone</td>
-            <td colspan="2">016-6312076</td>
+            <th bgcolor="#D5D5D5" rowspan="3" style="font-size: 15px;">Contacts</th>
+            <td bgcolor="#FFFFFF">Mobile Phone</td>
+            <td bgcolor="#FFFFFF" colspan="2">016-6312076</td>
         </tr>
         <tr>
-            <td>Social Media</td>
-            <td colspan="2">Instagram : @iskandarmxr</td>
+            <td bgcolor="#FFFFFF">Social Media</td>
+            <td bgcolor="#FFFFFF" colspan="2">Instagram : @iskandarmxr</td>
         </tr>
         <tr>
-            <td>Website</td>
-            <td colspan="2"><a href="https://www.mxrgameshop.com">www.mxrgameshop.com</a></td>
+            <td bgcolor="#FFFFFF">Website</td>
+            <td bgcolor="#FFFFFF" colspan="2"><a href="https://www.mxrgameshop.com">www.mxrgameshop.com</a></td>
         </tr>
         <tr>
-            <th style="font-size: 15px;">Course and Institution</th>
-            <td colspan="3">Computer Science (Software Engineering)<p></p>Universiti Tun Hussein Onn Malaysia
+            <th bgcolor="#D5D5D5" style="font-size: 15px;">Course and Institution</th>
+            <td bgcolor="#FFFFFF" colspan="3">Computer Science (Software Engineering)<p></p>Universiti Tun Hussein Onn Malaysia
             </td>
         </tr>
         <tr>
-            <th style="font-size: 15px;">Programming Skills</th>
-            <td colspan="3">C language, Java, HTML, PHP, Visual Basic, C#</td>
+            <th bgcolor="#D5D5D5" style="font-size: 15px;">Programming Skills</th>
+            <td bgcolor="#FFFFFF" colspan="3">C language, Java, HTML, PHP, Visual Basic, C#</td>
         </tr>
         <tr>
-            <th style="font-size: 15px;">Personal Interest</th>
-            <td colspan="3">Gaming and Online Business</td>
+            <th bgcolor="#D5D5D5" style="font-size: 15px;">Personal Interest</th>
+            <td bgcolor="#FFFFFF" colspan="3">Gaming and Online Business</td>
         </tr>
         <tr>
-            <th>Future Plans in 2024</th>
-            <td colspan="3">Achieving High CGPA (insyaAllah)</td>
+            <th bgcolor="#D5D5D5" style="font-size: 15px;">Hobbies</th>
+            <td bgcolor="#FFFFFF" colspan="3">Playing games and watching YouTube videos</td>
+        </tr>
+        <tr>
+            <th bgcolor="#D5D5D5" style="font-size: 15px;">Campus Life</th>
+            <td bgcolor="#FFFFFF" colspan="3">Meeting new university friends and gaining new knowledge about Software Engineering</td>
+        </tr>
+        <tr>
+            <th bgcolor="#D5D5D5">Future Plans in 2024</th>
+            <td bgcolor="#FFFFFF" colspan="3">Achieving High CGPA (insyaAllah)</td>
         </tr>
     </table>
 </body>
